--- a/cadastro.html
+++ b/cadastro.html
@@ -37,7 +37,7 @@
 
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<!-- <li>
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Página 1<span class="caret"></span></a>
 
@@ -47,7 +47,7 @@
 						<li><a href="#">Página 1-3</a></li>
 					</ul>
 				</li> -->
-				<li><a href="noticia.html">Noticia</a></li>
+				<li><a href="noticia.html">Noticias</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 
@@ -108,7 +108,7 @@
 <div class="container-fluid cadastro">
 	<h2>Cadastro</h2>
 
-	<form action="" method="post">
+	<form class="notLog" action="" method="post">
 		<fieldset>
 			<div class="form-group">
 				<label class="sr-only" for="user">Usuário:</label>
