--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
 
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<!-- <li>
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Página 1<span class="caret"></span></a>
 
@@ -47,8 +47,8 @@
 						<li><a href="#">Página 1-3</a></li>
 					</ul>
 				</li> -->
-				<li><a href="noticia.html">Noticia</a></li>
-				<li><a href="contato.html">Contato</a></li>
+				<li><a href="noticia.html">Noticias</a></li>
+				<li class="active"><a href="contato.html">Contato</a></li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
@@ -109,7 +109,7 @@
 
 <h2>Fale conosco</h2>
 
-	<form action="#" method="post">
+	<form class="notLog" action="#" method="post">
 		<fieldset>
 			<div class="form-group">
 				<label class="sr-only" for="nome">Nome completo:</label>
