--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<li><a href="#">Página 1-3</a></li>
 					</ul>
 				</li> -->
-				<li><a href="noticia.html">Noticia</a></li>
+				<li><a href="noticia.html">Noticias</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 
@@ -153,70 +153,63 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Sed non consequat odio.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
-			<a href="noticia-single.html">
-				<img src="images/image4.jpg">
-				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
-			</a>
-		</div>
-
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
