--- a/noticia-single.html
+++ b/noticia-single.html
@@ -37,7 +37,7 @@
 
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<!-- <li>
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Página 1<span class="caret"></span></a>
 
@@ -47,7 +47,7 @@
 						<li><a href="#">Página 1-3</a></li>
 					</ul>
 				</li> -->
-				<li><a href="noticia.html">Noticia</a></li>
+				<li><a href="noticia.html">Noticias</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 
@@ -106,13 +106,13 @@
 <!-- ==================== /NAV ==================== -->
 
 <div class="container-fluid not-single">
-	<div class="col-xs-12">
+	<div class="col-xs-12 col-sm">
 		<header>
 			<h2>Titulo da Noticia!</h2>
 			<img src="images/image1.jpg">
 		</header>
 
-		<div class="col-xs-12">
+		<div class="col-xs-12 col-sm-12">
 			<p>
 				Mussum Ipsum, cacilds vidis litro abertis. In elementis mé pra quem é amistosis quis leo. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Per aumento de cachacis, eu reclamis. Copo furadis é disculpa de bebadis, arcu quam euismod magna.
 			</p>
