--- a/noticia.html
+++ b/noticia.html
@@ -37,7 +37,7 @@
 
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<!-- <li>
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Página 1<span class="caret"></span></a>
 
@@ -47,7 +47,7 @@
 						<li><a href="#">Página 1-3</a></li>
 					</ul>
 				</li> -->
-				<li><a href="noticia.html">Noticia</a></li>
+				<li class="active"><a href="noticia.html">Noticias</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 
@@ -111,70 +111,70 @@
 
 		<h2>Notícias</h2>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Sed non consequat odio.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
 			</a>
 		</div>
 
-		<div class="col-xs-12 home-squares revelar">
+		<div class="col-xs-12 col-sm-4 home-squares revelar">
 			<a href="noticia-single.html">
 				<img src="images/image4.jpg">
 				<p>Mussum Ipsum, cacilds vidis litro abertis.</p>
