--- a/reset-pass.html
+++ b/reset-pass.html
@@ -37,7 +37,7 @@
 
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<!-- <li>
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Página 1<span class="caret"></span></a>
 
@@ -47,7 +47,7 @@
 						<li><a href="#">Página 1-3</a></li>
 					</ul>
 				</li> -->
-				<li><a href="noticia.html">Noticia</a></li>
+				<li><a href="noticia.html">Noticias</a></li>
 				<li><a href="contato.html">Contato</a></li>
 			</ul>
 
@@ -112,7 +112,7 @@
 
 	<p>Esqueceu sua senha? Ensira o seu email no campo abaixo e lhe enviaremos um email para redefiní-la.</p>
 
-	<form action="" method="post">
+	<form class="notLog" action="" method="post">
 		<div class="form-group">
 			<label class="sr-only" for="email">Email:</label>
 			<input class="form-control input-lg" type="email" id="email" name="email" placeholder="Email:" required>
