Ajuste ortográfico Responsivo

--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
 
 <meta charset="utf-8">
 <meta name="keywords" content="HTML, CSS">
-<meta name="description" content="Exemplo de Site Responsível">
+<meta name="description" content="Exemplo de Site Responsivo">
 <meta name="author" content="Robson Rodrigues">
 
 <link rel="icon" type="image/png" href="images/favicon.png">
@@ -14,7 +14,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Site Responsível</title>
+	<title>Site Responsivo</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
