--- a/erro_404.html
+++ b/erro_404.html
@@ -4,7 +4,7 @@
 
 <meta charset="utf-8">
 <meta name="keywords" content="HTML, CSS">
-<meta name="description" content="Exemplo de Site Responsível">
+<meta name="description" content="Exemplo de Site Responsivo">
 <meta name="author" content="Robson Rodrigues">
 
 <link rel="icon" type="image/png" href="images/favicon.png">
